# src/routes.ts
@@ -1,7 +1,7 @@
 import express from 'express';
 import multer from 'multer';
 
-import uploadConfig from '../config/upload';
+import uploadConfig from './config/upload';
 const upload = multer(uploadConfig);
 
 import UserController from './controllers/UserController';
@@ -12,9 +12,10 @@ import UploadController from './controllers/UploadController';
 export const routes = express.Router();
 
 routes.post('/login', SessionController.create); //Criar Sessão(LOGIN)
-// routes.post('/forgot_password', SessionController.forgotPassword); //Esqueci minha senha
+routes.post('/forgot_password', SessionController.forgotPassword); //Esqueci minha senha
 
 routes.post('/users/create', UserController.create); // Criar usuário
+routes.patch('/users/edit/:id', UserController.edit); // Editar usuário
 routes.get('/users/list', UserController.list); // Listar usuários
 routes.delete('/users/delete/:id', UserController.delete); // Deletar usuários
 
