# src/swagger_output.json
@@ -1,9 +1,9 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.0.1",
-    "title": "Cadmus API",
-    "description": "Documentação para a API do Chat Cadmus."
+    "version": "1.0.2",
+    "title": "Dynamusdev API",
+    "description": "Documentação para a API Dynamusdev."
   },
   "host": "localhost:3333",
   "basePath": "/",
@@ -21,8 +21,8 @@
       "description": "Send"
     },
     {
-      "name": "Teste Cadmus",
-      "description": "Get gamer data"
+      "name": "Upload",
+      "description": "Upload images, videos and audios"
     }
   ],
   "schemes": "http",
@@ -82,6 +82,42 @@
         }
       }
     },
+    "/forgot_password": {
+      "post": {
+        "tags": [
+          "Session"
+        ],
+        "description": "Endpoint para criar os usuários.",
+        "parameters": [
+          {
+            "name": "Data",
+            "in": "body",
+            "required": true,
+            "description": "Dados de login",
+            "type": "object",
+            "schema": {
+              "$ref": "#/definitions/ForgotPassword"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/SuccessChangePass"
+            },
+            "message": "Uma nova senha foi enviada para o seu email!!!"
+          },
+          "403": {
+            "schema": {
+              "$ref": "#/definitions/ErrorUserDeleted"
+            },
+            "error": "Este usuário não está mais cadastrado na nossa base de dados",
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
     "/users/create": {
       "post": {
         "tags": [
@@ -114,6 +150,41 @@
               "$ref": "#/definitions/CreateError"
             },
             "error": "Esse usuário já existe"
+          }
+        }
+      }
+    },
+    "/users/edit/{id}": {
+      "patch": {
+        "tags": [
+          "User"
+        ],
+        "description": "Endpoint para alterar os dados do usuário.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "Data",
+            "in": "body",
+            "required": true,
+            "description": "Dados do usuário",
+            "type": "object",
+            "schema": {
+              "$ref": "#/definitions/EditUserTemplate"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/User"
+            },
+            "message": "Dados do usuário foram atualizados!!!"
           }
         }
       }
@@ -182,16 +253,9 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/User"
+              "$ref": "#/definitions/SendMessage"
             },
             "message": "O usuário foi cadastrado!!!"
-          },
-          "400": {
-            "schema": {
-              "$ref": "#/definitions/CreateError"
-            },
-            "error": "Esse usuário já existe",
-            "description": "Bad Request"
           }
         }
       }
@@ -201,7 +265,7 @@
         "tags": [
           "Message"
         ],
-        "description": "Endpoint para ____FUNC____ as mensagens.",
+        "description": "Endpoint para mostrar as mensagens.",
         "parameters": [],
         "responses": {
           "200": {
@@ -276,6 +340,49 @@
         }
       }
     },
+    "EditUserTemplate": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "Alexandre Alves Nascimento"
+        },
+        "email": {
+          "type": "string",
+          "example": "alexandrenascimento@live.com"
+        },
+        "image": {
+          "type": "string",
+          "example": "https://img.icons8.com/officel/2x/person-male-skin-type-6.png"
+        },
+        "password": {
+          "type": "string",
+          "example": "q1w2e3r4"
+        }
+      }
+    },
+    "ForgotPassword": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "alexandrenascimento@live.com"
+        }
+      }
+    },
+    "SuccessChangePass": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "number",
+          "example": 200
+        },
+        "message": {
+          "type": "string",
+          "example": "Uma nova senha foi enviada para o seu email"
+        }
+      }
+    },
     "MessageTemplate": {
       "type": "object",
       "properties": {
@@ -329,7 +436,7 @@
       "properties": {
         "message": {
           "type": "string",
-          "example": "Comando enviado!!!"
+          "example": "Mensagem enviada"
         }
       }
     },
@@ -423,154 +530,6 @@
         "message": {
           "type": "string",
           "example": "Succesfuly user deleted"
-        }
-      }
-    },
-    "GamerResponse": {
-      "type": "object",
-      "properties": {
-        "status": {
-          "type": "number",
-          "example": 200
-        },
-        "user": {
-          "type": "object",
-          "properties": {
-            "id": {
-              "type": "number",
-              "example": 11231
-            },
-            "name": {
-              "type": "string",
-              "example": "Cadmus gameplay"
-            },
-            "email": {
-              "type": "string",
-              "example": "gameplay.cadmus@cadmus.com.br"
-            },
-            "image": {
-              "type": "string",
-              "example": "http://google.com.br"
-            },
-            "experience": {
-              "type": "number",
-              "example": 1150
-            },
-            "maxExperience": {
-              "type": "number",
-              "example": 2100
-            },
-            "matches": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "image": {
-                    "type": "string",
-                    "example": "http://google.com.br"
-                  },
-                  "title": {
-                    "type": "string",
-                    "example": "ranked"
-                  },
-                  "victory": {
-                    "type": "number",
-                    "example": 235
-                  },
-                  "defeat": {
-                    "type": "number",
-                    "example": 432
-                  },
-                  "playersWaiting": {
-                    "type": "number",
-                    "example": 15
-                  },
-                  "button": {
-                    "type": "object",
-                    "properties": {
-                      "icon": {
-                        "type": "string",
-                        "example": "https://google.com.br"
-                      },
-                      "title": {
-                        "type": "string",
-                        "example": "entrar na fila"
-                      },
-                      "link": {
-                        "type": "string",
-                        "example": "https:google.com.br"
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "levels": {
-          "type": "object",
-          "properties": {
-            "casual": {
-              "type": "number",
-              "example": 1
-            },
-            "amateur": {
-              "type": "number",
-              "example": 700
-            },
-            "competitive": {
-              "type": "number",
-              "example": 1400
-            },
-            "professional": {
-              "type": "number",
-              "example": 2100
-            }
-          }
-        },
-        "roms": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "id": {
-                "type": "number",
-                "example": 162
-              },
-              "title": {
-                "type": "string",
-                "example": "Sala EstagiÃ¡rios"
-              },
-              "category": {
-                "type": "string",
-                "example": "backend"
-              },
-              "map": {
-                "type": "string",
-                "example": "map_java"
-              },
-              "players": {
-                "type": "number",
-                "example": 3
-              },
-              "capacity": {
-                "type": "number",
-                "example": 12
-              },
-              "image": {
-                "type": "string",
-                "example": "http://google.com.br"
-              }
-            }
-          }
-        },
-        "online": {
-          "type": "number",
-          "example": 123
-        },
-        "bans": {
-          "type": "number",
-          "example": 150
         }
       }
     }
